# ghost-size0-static

./: CMakeLists.txt  README  fetch_from_ghost.cc  genstatic.py  parse_pages.cc  parse_posts.cc
